# xrpl-creator-capsule

./: .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SECURITY.md  SHIP_GATE.md  package-lock.json  package.json  tsconfig.json  verify.sh
.github/ISSUE_TEMPLATE/: access-failure.md  bug.md  confusion.md  publish-failure.md
.github/workflows/: ci.yml
app/: bridge-worker.ts  index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/sample/: README.md  demo-draft.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs
artifacts/: .gitignore  PROOF-3-SIMULATION-TRIALS.md  PROOF-4-DESKTOP-RUNTIME-TRUST.md  PROOF-4A-MODE-SWITCH-TRUTH.md  PROOF-4B-RESTART-TRUTH.md  PROOF-4C-INTERRUPTION-TRUTH.md  PROOF-4D-NETWORK-FAILURE-TRUTH.md  PROOF-4E-TIMING-TRUTH.md  PROOF-B5-DIRECT-RAIL.md  PROOF-C-ACCESS-TRUTH.md  PROOF-D-GOVERNANCE-TRUTH.md  PROOF-E-DURABILITY-TRUTH.md  failure-drills.test.ts  governance-drills.test.ts  governance-golden-path.test.ts  simulation-trials.test.ts  verify-minter-check.ts
docs/: handbook.md
fixtures/: direct-rail-access-grant-allow.json  direct-rail-access-grant-deny.json  direct-rail-governance-policy.json  direct-rail-payout-decision.json  direct-rail-payout-execution.json  direct-rail-payout-proposal.json  direct-rail-recovery-bundle.json  direct-rail-wallets.json  sample-release.json
site/: astro.config.mjs  package-lock.json  package.json
(+51 files in other folders)
