[package]
name = "capsule-desktop"
version = "1.0.0"
edition = "2024"

[lib]
name = "capsule_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "capsule-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
